--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flying Star</title>
+    <title>Flying Star by Pravin A Mathew</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
